[gd_scene load_steps=7 format=3 uid="uid://d0sq4d4745tx4"]

[ext_resource type="Texture2D" uid="uid://cqtjxcxculiy1" path="res://src/sea.png" id="1_d6ts0"]
[ext_resource type="Script" uid="uid://dmsh2r047ococ" path="res://scene/Map/seaside.gd" id="1_ddhkp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqs6e"]
size = Vector2(256, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7d03o"]
size = Vector2(2, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23aji"]
size = Vector2(256, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpx6j"]
size = Vector2(256, 180)

[node name="seaside" type="Node2D"]
script = ExtResource("1_ddhkp")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(128, 128)
texture = ExtResource("1_d6ts0")

[node name="collision_bottom" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(128, 248)
shape = SubResource("RectangleShape2D_qqs6e")

[node name="collision_right" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(255, 128)
shape = SubResource("RectangleShape2D_7d03o")

[node name="collision_top" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(128, 84)
shape = SubResource("RectangleShape2D_23aji")

[node name="fishing_place" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 180.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="fishing_area" type="Area2D" parent="fishing_place"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fishing_place/fishing_area"]
position = Vector2(128, 90)
shape = SubResource("RectangleShape2D_cpx6j")

[node name="change_skin" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="change_skin"]
position = Vector2(1, 128)
shape = SubResource("RectangleShape2D_7d03o")

[connection signal="mouse_entered" from="fishing_place" to="." method="_on_fishing_place_mouse_entered"]
[connection signal="mouse_exited" from="fishing_place" to="." method="_on_fishing_place_mouse_exited"]
[connection signal="area_entered" from="change_skin" to="." method="_on_change_skin_area_entered"]
